kubernetes/4-solr-nodes-3-zk/search-service-ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose.yml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: search-service-ingress
  name: search-service-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: search-service-ingress
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose.yml convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/saas-network: "true"
        io.kompose.service: search-service-ingress
    spec:
      containers:
        - env:
            - name: SOLR_CONTAINER_NAME
              value: solr1-container
          image: neosoftcoe/search-service-ingress:latest
          name: ssi-container
          ports:
            - containerPort: 8081
          resources: {}
          volumeMounts:
            - mountPath: /usr/app/DeletedRecordFiles
              name: search-service-ingress-claim0
      restartPolicy: Always
      volumes:
        - name: search-service-ingress-claim0
          persistentVolumeClaim:
            claimName: search-service-ingress-claim0
status: {}
