kubernetes/4-solr-nodes-3-zk/solr1-container-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose.yml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: solr1-container
  name: solr1-container
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: solr1-container
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose.yml convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/saas-network: "true"
        io.kompose.service: solr1-container
    spec:
      containers:
        - env:
            - name: ZK_HOST
              value: zoo1:2181, zoo2:2181, zoo3:2181
          image: solr:8.11.1
          name: solr1-container
          ports:
            - containerPort: 8983
          volumeMounts:
            - mountPath: /var/solr
              name: solr1-container-claim0
      restartPolicy: Always
      volumes:
        - name: solr1-container-claim0
          persistentVolumeClaim:
            claimName: solr1-container-claim0
status: {}
