kubernetes/4-solr-nodes-3-zk/zoo2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose.yml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: zoo2
  name: zoo2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zoo2
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose.yml convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/saas-network: "true"
        io.kompose.service: zoo2
    spec:
      containers:
        - env:
            - name: ZOO_4LW_COMMANDS_WHITELIST
              value: mntr, conf, ruok
            - name: ZOO_CFG_EXTRA
              value: metricsProvider.className=org.apache.zookeeper.metrics.prometheus.PrometheusMetricsProvider metricsProvider.httpPort=7000 metricsProvider.exportJvmInfo=true
            - name: ZOO_MY_ID
              value: "2"
            - name: ZOO_SERVERS
              value: server.1=zoo1:2888:3888;2181 server.2=zoo2:2888:3888;2181 server.3=zoo3:2888:3888;2181
          image: zookeeper:3.6.2
          name: zoo2
          ports:
            - containerPort: 2181
            - containerPort: 7000
          resources: {}
      hostname: zoo2
      restartPolicy: Always
status: {}
