kubernetes/4-solr-nodes-3-zk/solr4-container-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose.yml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: solr4-container
  name: solr4-container
spec:
  ports:
    - name: "8983"
      port: 8983
      targetPort: 8983
  selector:
    io.kompose.service: solr4-container
  type: NodePort
status:
  loadBalancer: {}
