kubernetes/4-solr-nodes-3-zk/zoo3-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose.yml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: zoo3
  name: zoo3
spec:
  ports:
    - name: "2181"
      port: 2181
      targetPort: 2181
    - name: "7001"
      port: 7001
      targetPort: 7000
    - name: "3888"
      port: 3888
      targetPort: 3888
    - name: "2888"
      port: 2888
      targetPort: 2888
  selector:
    io.kompose.service: zoo3
  type: NodePort
status:
  loadBalancer: {}
