kubernetes/4-solr-nodes-3-zk/saas-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: saas-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/saas-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/saas-network: "true"
